--- a/1-4/templates/HomeWork4.html
+++ b/1-4/templates/HomeWork4.html
@@ -42,7 +42,7 @@
 		<div>登入系統</div>
 	</div>
 	<div class="show">
-		<form action="/siqnin" method="POST">
+		<form action="/signin" method="POST">
 			帳號 <input type="text" name="yourid"/>
 			<br/>
 			密碼 <input type="password" name="yourpassword"/>
